--- a/src/main/resources/templates/shopping.html
+++ b/src/main/resources/templates/shopping.html
@@ -188,7 +188,7 @@
                     <span style="font-size:14px;color:#E53333;"><strong>地址填写提交一次即可 &nbsp;，切勿重复填写，影响发货速度或漏发！</strong></span><span style="font-size:14px;color:#E53333;"><strong></strong></span>
                 </p>
                 <p style="text-align:center;">
-                    <span style="font-size:16px;">客服微信：xxxxxx</span>
+                    <span style="font-size:16px;">客服微信：<span th:text="${WEIXIN}">xxxxxx</span></span>
                 </p>                    </div>
             <button id="tijiao">提交</button>
             <span  style="display: none;" id="GOODS_NAME" th:text="${GOODS_NAME}"></span>
